# datalense

./: README.md  pyproject.toml
src/datalense/: __init__.py  dataset.py
src/datalense/db/: __init__.py  client.py
src/datalense/loaders/: __init__.py  multimodal.py
src/datalense/search/: __init__.py  nearest.py  text.py
src/datalense/viz/: __init__.py  grids.py  overlays.py
